--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.1.5",
-  "description": "A sample Node.js app using Express 4",
-  "main": "index.js",
+  "name": "restApp",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "ejs": "2.3.3",
-    "express": "4.13.3"
-  },
-  "engines": {
-    "node": "0.12.7"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
+    "bcrypt": "^0.8.5",
+    "body-parser": "~1.14.2",
+    "cookie-parser": "~1.4.1",
+    "debug": "~2.2.0",
+    "deco": "^0.12.3",
+    "ejs": "~2.3.4",
+    "express": "~4.13.3",
+    "express-ejs-layouts": "~2.0.0",
+    "jsonwebtoken": "~5.5.4",
+    "mongoose": "~4.3.5",
+    "mongoskin": "^1.3.20",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0",
+    "stripe": "~4.1.0"
+  }
 }
